fix problem of clipped picture with menu

--- a/src/components/MealWrapper/MealWrapper.module.scss
+++ b/src/components/MealWrapper/MealWrapper.module.scss
@@ -24,6 +24,7 @@
       width: 180px;
       height: 180px;
       clip-path: circle(44%);
+      z-index: 0;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -70,4 +71,3 @@
 //Tablet
 @media (min-width: 480px) and (max-width: 768px) {
 }
-//Mobile
